--- a/dueTresure/dueTresure.vcxproj
+++ b/dueTresure/dueTresure.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{89DADA2F-F927-46C5-B535-96F2175937DA}</ProjectGuid>
     <RootNamespace>dueTresure</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.14393.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -133,6 +133,8 @@
   <ItemGroup>
     <ClCompile Include="bg\Bg.cpp" />
     <ClCompile Include="bg\GameBG.cpp" />
+    <ClCompile Include="Input\InputState.cpp" />
+    <ClCompile Include="Input\INPUT_ID.cpp" />
     <ClCompile Include="obj\Obj.cpp" />
     <ClCompile Include="bg\ResultBg.cpp" />
     <ClCompile Include="Scene\GameScene.cpp" />
@@ -149,6 +151,8 @@
   <ItemGroup>
     <ClInclude Include="bg\Bg.h" />
     <ClInclude Include="bg\GameBG.h" />
+    <ClInclude Include="Input\InputState.h" />
+    <ClInclude Include="Input\INPUT_ID.h" />
     <ClInclude Include="obj\Obj.h" />
     <ClInclude Include="bg\ResultBg.h" />
     <ClInclude Include="Scene\GameScene.h" />
