--- a/dueTresure/dueTresure.vcxproj
+++ b/dueTresure/dueTresure.vcxproj
@@ -133,6 +133,7 @@
   <ItemGroup>
     <ClCompile Include="bg\Bg.cpp" />
     <ClCompile Include="bg\GameBG.cpp" />
+    <ClCompile Include="Input\InputUp.cpp" />
     <ClCompile Include="Input\InputState.cpp" />
     <ClCompile Include="Input\INPUT_ID.cpp" />
     <ClCompile Include="obj\Obj.cpp" />
@@ -151,6 +152,7 @@
   <ItemGroup>
     <ClInclude Include="bg\Bg.h" />
     <ClInclude Include="bg\GameBG.h" />
+    <ClInclude Include="Input\InputUp.h" />
     <ClInclude Include="Input\InputState.h" />
     <ClInclude Include="Input\INPUT_ID.h" />
     <ClInclude Include="obj\Obj.h" />
