--- a/dueTresure/dueTresure.vcxproj
+++ b/dueTresure/dueTresure.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="Input\INPUT_ID.cpp" />
     <ClCompile Include="obj\Obj.cpp" />
     <ClCompile Include="bg\ResultBg.cpp" />
+    <ClCompile Include="obj\Player.cpp" />
     <ClCompile Include="Scene\GameScene.cpp" />
     <ClCompile Include="Scene\LAYER.cpp" />
     <ClCompile Include="Scene\ResultScene.cpp" />
@@ -155,6 +156,7 @@
     <ClInclude Include="Input\INPUT_ID.h" />
     <ClInclude Include="obj\Obj.h" />
     <ClInclude Include="bg\ResultBg.h" />
+    <ClInclude Include="obj\Player.h" />
     <ClInclude Include="Scene\GameScene.h" />
     <ClInclude Include="Scene\LAYER.h" />
     <ClInclude Include="Scene\ResultScene.h" />
