--- a/dueTresure/dueTresure.vcxproj
+++ b/dueTresure/dueTresure.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="obj\Player.cpp" />
     <ClCompile Include="Scene\GameScene.cpp" />
     <ClCompile Include="Scene\LAYER.cpp" />
+    <ClCompile Include="Scene\RankScene.cpp" />
     <ClCompile Include="Scene\ResultScene.cpp" />
     <ClCompile Include="Scene\SceneMng.cpp" />
     <ClCompile Include="Scene\BaseScene.cpp" />
@@ -159,6 +160,7 @@
     <ClInclude Include="obj\Player.h" />
     <ClInclude Include="Scene\GameScene.h" />
     <ClInclude Include="Scene\LAYER.h" />
+    <ClInclude Include="Scene\RankScene.h" />
     <ClInclude Include="Scene\ResultScene.h" />
     <ClInclude Include="Scene\SceneMng.h" />
     <ClInclude Include="Scene\BaseScene.h" />
