--- a/dueTresure/dueTresure.vcxproj
+++ b/dueTresure/dueTresure.vcxproj
@@ -133,6 +133,7 @@
   <ItemGroup>
     <ClCompile Include="bg\Bg.cpp" />
     <ClCompile Include="bg\GameBG.cpp" />
+    <ClCompile Include="obj\Gimmic.cpp" />
     <ClCompile Include="Input\InputState.cpp" />
     <ClCompile Include="Input\INPUT_ID.cpp" />
     <ClCompile Include="obj\Obj.cpp" />
@@ -153,6 +154,7 @@
   <ItemGroup>
     <ClInclude Include="bg\Bg.h" />
     <ClInclude Include="bg\GameBG.h" />
+    <ClInclude Include="obj\Gimmic.h" />
     <ClInclude Include="Input\InputState.h" />
     <ClInclude Include="Input\INPUT_ID.h" />
     <ClInclude Include="obj\Obj.h" />
